# IC

./: README.md
assgniment1/: wav_hist.h  wav_quant.cpp  wav_quant.h
assgniment1/results/bins/: README.md
assgniment1/sndfile-example-src/: CMakeLists.txt  bitstream.cpp  bitstream.h  decoder.cpp  decoder_lossy.cpp  encoder.cpp  encoder_lossy.cpp  run  wav effects.cpp  wav_cmp.cpp  wav_effects.cpp  wav_effects.h  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
assignment1/results/bins/: README.md
assignment1/results/lossy_encoder/: README.md
assignment1/sndfile-example-src/: README  bitstream.cpp  decoder.cpp  decoder_lossy.cpp  encoder.cpp  wav_cmp.cpp  wav_quant.h
assignment2/: result.ppm
assignment2/result_images/extract/b/: airplane.ppm  anemone.ppm  baboon.ppm  bike3.ppm  boat.ppm  girl.ppm  house.ppm  lena.ppm  monarch.ppm  peppers.ppm  tulips.ppm
assignment2/result_images/extract/g/: airplane.ppm  anemone.ppm  baboon.ppm  bike3.ppm  boat.ppm  girl.ppm  house.ppm  lena.ppm  monarch.ppm  peppers.ppm  tulips.ppm
assignment2/result_images/extract/r/: airplane.ppm  anemone.ppm  baboon.ppm  bike3.ppm  boat.ppm  girl.ppm  house.ppm  lena.ppm  monarch.ppm  peppers.ppm  tulips.ppm
assignment2/result_images/gray/: airplane.pgm  anemone.pgm  arial.pgm  baboon.pgm  bike3.pgm  boat.pgm  girl.pgm  house.pgm  lena.pgm  monarch.pgm  peppers.pgm  tulips.pgm
assignment2/result_images/light/0/: anemone.ppm  arial.ppm  bike3.ppm  tulips.ppm
assignment2/result_images/light/125.00/: airplane.ppm  anemone.ppm  arial.ppm  baboon.ppm  bike3.ppm  boat.ppm  girl.ppm  house.ppm  lena.ppm  monarch.ppm  peppers.ppm  tulips.ppm
assignment2/result_images/light/150.0/: airplane.ppm  anemone.ppm  arial.ppm  baboon.ppm  bike3.ppm  boat.ppm  girl.ppm  house.ppm  lena.ppm  monarch.ppm  peppers.ppm  tulips.ppm
assignment2/src/: CMakeLists.txt  audio_decoder.cpp  audio_encoder.cpp  bitstream.h  golomb.cpp  golomb.h  ppm_effects.cpp  ppm_effects.h  ppm_effects.hpp  testEffects  testGolomb
assignment3/src/: CMakeLists.txt  bitstream.h  frame.h  frame.hpp  frame_decoder.cpp  frame_encoder.cpp  golomb.h  grid.h  imageFilter.h  reader.cpp  run.sh  video_cmp.cpp  video_cmp.h  video_decoder.cpp  video_encoder.cpp  yuv_file_handler.h  yuv_reader.h  yuv_writer.h
(+100 files in other folders)
